# TinyMPC

./: Manifest.toml  Project.toml  cbf_dynamic_obstacles.csv  cbf_dynamic_tracking.csv  cbf_ushape_trajectory.csv  compare_tv_vs_psd.py  plot_compare_psd_vs_tv.py  plot_dynamic_compare.py  plot_dynamic_tracking.py  plot_psd_trajectory.py  plot_tv_linear_trajectory.py  plot_tv_tangents_vs_psd.py  psd_dynamic_obstacles.csv  psd_dynamic_plan_log.csv  psd_dynamic_plans.csv  psd_dynamic_tracking.csv  psd_narrow2d_trajectory.csv  psd_trajectory.csv  psd_tv_combo_trajectory.csv  psd_tv_linear_narrow2d_trajectory.csv  psd_tv_pipeline_narrow2d_stage1_psd.csv  psd_tv_pipeline_narrow2d_stage2_tv.csv  psd_tv_pipeline_stage1_psd.csv  psd_tv_pipeline_stage2_tv.csv  psd_ushape_tracking.csv  psd_ushape_trajectory.csv  tv_dynamic_obstacles.csv  tv_dynamic_tangents.csv  tv_dynamic_tracking.csv  tv_linear_trajectory.csv  tv_narrow2d_trajectory.csv  tv_ushape_trajectory.csv
examples/: CMakeLists.txt  cartpole_example.cpp  demo_config.hpp  tiny_cbf_dynamic_demo.cpp  tiny_cbf_ushape_demo.cpp  tiny_psd_demo.cpp  tiny_psd_demo_narrow2d.cpp  tiny_psd_dynamic_demo.cpp  tiny_psd_reg_tv_demo.cpp  tiny_psd_tv_demo.cpp  tiny_psd_tv_narrow2d.cpp  tiny_psd_ushape_demo.cpp  tiny_tv_dynamic_demo.cpp  tiny_tv_linear_demo.cpp  tiny_tv_linear_demo_narrow2d.cpp  tiny_tv_psd_reg_narrow2d.cpp  tiny_tv_ushape_demo.cpp  tv_linear_demo.cpp
src/tinympc/: admm.cpp  admm.cpp.bak  admm.hpp  psd_support.hpp  rho_benchmark.cpp  rho_benchmark.hpp  tiny_api.cpp  tiny_api.cpp.bak  tiny_api_constants.hpp  tv_constraints.hpp  types.hpp
